--- a/screen/.screenrc
+++ b/screen/.screenrc
@@ -1,59 +1,3 @@
-autodetach on
-bell_msg "^G"
-defkanji utf-8
-defencoding utf-8
-encoding utf-8 utf-8
-defscrollback 4096
-escape ^Jj
-startup_message off
-vbell off
-#caption always "%{= wb} %-w%{=bu dr}%n %t%{-}%+w %= %{=b wk} [%l] %{=b wb}%y/%m/%d(%D) %{=b wm}%c"
-bind n screen
-bind p prev
-bind n next
-bind l windowlist
-#Informative statusbar
 hardstatus off
 hardstatus alwayslastline
-hardstatus string '%{+b gk}[ %{w}%H %{g}][%= %{wk}%?%-Lw%?%{=b kR}(%{W}%n*%f %t%?(%u)%?%{=b kR})%{= kw}%?%+Lw%?%?%= %{+b kg}][%{w}%l%{w}]%{kg}[ %{w}%m/%d %c:%s%{+b kg}]'
-#hardstatus string '%{= kG}[ %{G}%H %{g}][%= %{= kw}%?%-Lw%?%{r}(%{W}%n*%f%t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{B} %m-%d %{W}%c %{g}]'
-caption         splitonly "%{.BW} >> %n %t"
-
-#Start at window number from 1
-# http://wiki.archlinux.org/index.php/Screen_Tips
-bind c screen 1
-# miss typo for cltr + c
-bind ^c screen 1
-bind 0 select 10
-screen 1
-select 1
-#resize C-j r resize with j k Keys
-#http://www.rubyist.net/~rubikitch/computer/screen/
-bind r eval 'echo "Resize window"' 'command -c resize'
-bind -c resize ^]  command
-bind -c resize j eval 'resize +1' 'command -c resize'
-bind -c resize k eval 'resize -1' 'command -c resize'
-
-# Long time I had this in my private screenrc file. But many people
-#xterm understands both im/ic and doesn't have a status line.
-#Note: Do not specify im and ic in the real termcap/info file as
-#some programs (e.g. vi) will (no,no, may (jw)) not work anymore.
-termcap  xterm|fptwist hs@:cs=\E[%i%d;%dr:im=\E[4h:ei=\E[4l
-terminfo xterm|fptwist hs@:cs=\E[%i%p1%d;%p2%dr:im=\E[4h:ei=\E[4l
-
-# seem to want it (jw):
-# we do not want the width to change to 80 characters on startup:
-# on suns, /etc/termcap has :is=\E[r\E[m\E[2J\E[H\E[?7h\E[?1;3;4;6l:
-termcapinfo screen 'is=\E[r\E[m\E[2J\E[H\E[?7h\E[?1;4;6l'
-
-#remove some stupid / dangerous key bindings
-bind ^k
-#bind L
-bind ^\
-#make them better
-bind \\ quit
-bind K kill
-bind I login on
-bind O login off
-bind } history
-
+hardstatus string '%{= kG}[ %{G}%H %{g}][%= %{= kw}%?%-Lw%?%{r}(%{W}%n*%f%t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{B} %m-%d %{W} %c %{g}]'
